--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 # Project Information
-site_name: omnissa Developer Portal
+site_name: apis/ws1-api-intelligence
 site_url: https://euc-dev.github.io/ws1-api-intelligence/
 site_author: Phil Helmling
 site_description: POC for developer.omnissa.com
@@ -55,10 +55,12 @@ theme:
   - content.code.annotate
   - content.code.copy
   - content.tabs.link
+  #- navigation.expand
   - navigation.footer
   - navigation.header
   - navigation.indexes
   - navigation.instant
+  - navigation.path
   - navigation.sections
   - navigation.tabs
   - navigation.tabs.sticky
@@ -68,6 +70,7 @@ theme:
   - search.share
   - search.suggest
   - toc.follow
+  - toc.integrate
 
 # Plugins
 plugins:
@@ -112,15 +115,19 @@ extra:
 
 extra_css:
   - assets/stylesheets/extra.css
-  - assets/stylesheets/spanable.css
+  - assets/stylesheets/neoteroi-mkdocs.css
 
 # Extensions
 markdown_extensions:
   - admonition
+  - pymdownx.details
+  - pymdownx.superfences
   - attr_list
   - footnotes
   - md_in_html
   - neoteroi.spantable
+  #- neoteroi.mkdocsoad
+  - neoteroi.cards
   - pymdownx.critic
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
@@ -132,7 +139,7 @@ markdown_extensions:
   - pymdownx.highlight:
       use_pygments: true
   - pymdownx.snippets:
-      check_paths: true
+      #check_paths: true
   - pymdownx.superfences:
       custom_fences:
       - name: mermaid
@@ -140,29 +147,29 @@ markdown_extensions:
         format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.tabbed:
       alternate_style: true
-  - pymdownx.details
+  #- pymdownx.details
   - tables
   - toc:
       permalink: true
 
 # Navigation
-nav:
-  - Home:
-    - index.md
-  - Dev Centre:
-    - dev-centre/index.md
-#  - Product Docs:
-#    - product-docs/index.md
-  - APIs:
-    - apis/index.md
-  - Code Samples: 
-    - samples/index.md
-  - PowerCLI:
-    - powercli/index.md
-  - SDKs: 
-    - /sdks/index.md
-  - Support:
-    - support/index.md
-  - About:
-    - about.md
+# nav:
+#   - Home:
+#     - index.md
+#   - Dev Centre:
+#     - dev-centre/index.md
+# #  - Product Docs:
+# #    - product-docs/index.md
+#   - APIs:
+#     - apis/index.md
+#   - Code Samples: 
+#     - samples/index.md
+#   - PowerCLI:
+#     - powercli/index.md
+#   - SDKs: 
+#     - /sdks/index.md
+#   - Support:
+#     - support/index.md
+#   - About:
+#     - about.md
     
