--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 # Project Information
-site_name: WS1 Intelligence APIs
+site_name: Omnissa Intelligence APIs
 site_url: https://euc-dev.github.io/apis/ws1-intelligence-apis/
 site_author: Phil Helmling
 site_description: Submodule for developer.omnissa.com
